[ADD/FIX] Slight dropshadow on home forms. Fixed links not showing on contact

--- a/style-transfer-portfolio/src/Contact.css
+++ b/style-transfer-portfolio/src/Contact.css
@@ -4,6 +4,6 @@
 }
 
 .contactSection > a {
-    /* font-size: 50px; */
+    color: #000;
     margin: 25px;
 }
