--- a/style-transfer-portfolio/src/Home.css
+++ b/style-transfer-portfolio/src/Home.css
@@ -21,8 +21,10 @@ strong:hover {
     width: 600px;
     height: 384px;
     margin: auto;
-    padding-top: 5vh;
+    margin-top: 5vh;
     overflow: hidden;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: .3s;
 }
 
 /* Email */
@@ -42,4 +44,7 @@ strong:hover {
     height: calc(60% - 200px);
     opacity: .7;
     margin: auto;
+    margin-top: 5vh;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: .3s;
 }
